--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ python_requires = >=3.7
 install_requires =
     mmcv-full
     numpy
-    torch
+    torch>=1.9.0
     torchvision
 
 [options.package_data]
