--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ zip_safe = False
 packages = find:
 python_requires = >=3.7
 install_requires =
-    mmcv-full
+    mmcv-full>=1.3.13
     numpy
     torch>=1.9.0
     torchvision
