--- a/setup.cfg
+++ b/setup.cfg
@@ -20,8 +20,10 @@ python_requires = >=3.6
 install_requires =
     mmcv-full>=1.3.13
     numpy
+    requests
     torch>=1.9.0
     torchvision
+    tqdm
     VapourSynth>=55
 
 [options.package_data]
