Add opencv-python to dependencies
For unknown reason MMCV doesn't list opencv-python in its requirement.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
 dependencies = [
   "mmcv-full>=1.7.1",
   "numpy",
+  "opencv-python",
   "requests",
   "torch>=1.13.1",
   "torchvision>=0.14.1",
