Specify version for the other dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,11 +19,11 @@ classifiers = [
 ]
 dependencies = [
   "mmcv>=2.0.0",
-  "numpy",
-  "requests",
+  "numpy>=1.24.3",
+  "requests>=2.30.0",
   "torch>=2.0.1",
   "torchvision>=0.15.2",
-  "tqdm",
+  "tqdm>=4.65.0",
   "VapourSynth>=60"
 ]
 
