--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
   "Topic :: Multimedia :: Video"
 ]
 dependencies = [
-  "mmcv>=2.0.0",
+  "mmengine",
   "numpy>=1.24.3",
   "requests>=2.30.0",
   "torch>=2.0.1",
